[tool.poetry]
name = "lpp3ed"
version = "0.1.0"
description = "Learn Python Programming - 3ed"
authors = ["Lucas <lcvas.pro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
